﻿10.20 -> 10.21
XX/XX/XXXX

 • Fixed fusions' globes not hiding when LUPS is enabled
 • Fixed critters gadget casually triggering non game-breaking errors
 • unit_targetting_priorities compatibility for latest maintenance engines (963+) (issue #6112)


10.19 -> 10.20
20/12/2018

 • Lowered vehicle max speeds, aiming to be more comparable with BA 9.46
 • Fixed xmasballs taking damage and being area-targetable


10.18 -> 10.19
15/12/2018

 • Hover constructors buildpower 140->110
 • Added option: GUI opacity
 • Added option: Buildmenu radar icons + buildmenu icons are more squared
 • Removed iconset: modern_simplified
 • Removed firestate button from anti's
 • Fixed pyro pilotlight showing when out of los
 • Added modoption: "globallos", enables full visibility
 • DAI uses emp/tactical/nukes + remembers seen buildings and try to take these down.
 • Added "Music Player" widget. Music excluded. (download from https://springfiles.com/spring/games/ota-music-ba-v10)


10.17 -> 10.18
28/11/2018

 • Fixed com counter
 • Fixed too bright laserhit lights
 • Renamed modoption 'ffa' to 'ffa_mode'
 • Made mapmods work again (modoption: allowmapmutators, default enabled)
 • Player-TV widget enabled by default (shows on top of advplayerslist when spectator)


10.16 -> 10.17
21/11/2018

 • Fixed range exploit
 • Fighters will explode with less damage (half damage, 2/3 AoE)
 • Fixes and tweaks for Pausescreen, Autoquit, nanobeams and Player TV
 • Limited MSAA slider option max 8


10.15 -> 10.16
16/11/2018

 • 'nanoframes' will now be hit when build process reaches 5% (was 10%)
 • Fixed nano beam errors + different beam visual for reclaiming
 • Added widget "Player TV": auto camera tracks top trueskill players + switches every 40 secs
 • "Auto quit" widget will keep trying to quit if there is no mouse movement detected each minute
 • Pause screen will show when no new gameframes have been received (host admin pause)


10.14 -> 10.15
11/11/2018
