@@ -158,7 +158,7 @@ return {
 		weapons = {
 			[1] = {
 				def = "SPIDER",
-				onlytargetcategory = "SURFACE",
+				onlytargetcategory = "EMPABLE",
 			},
 		},
 	},
