@@ -120,7 +120,7 @@ return {
 				def = "BLADEWING_LYZER",
 				maindir = "0 0 1",
 				maxangledif = 90,
-				onlytargetcategory = "SURFACE",
+				onlytargetcategory = "EMPABLE",
 			},
 		},
 	},
